[package]
name = "lunar-logger"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Ciubix8513/lunar-logger"
license = "MIT"
description = "Simple logger with write to file functionality"
readme = "Readme.md"

[dependencies]
chrono =  "0.4.38"
log = "0.4.21"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = {version = "0.3.68", features = ["console"]}
wasm-bindgen = "0.2.91"
